--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "TypeSaver",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "__MSG_appDescription__",
   "default_locale": "ko",
   "icons": {
@@ -29,7 +29,7 @@
     }
   ],
   "permissions": [
-    "storage", "contextMenus", "tabs"
+    "storage", "contextMenus", "activeTab"
   ],
   "host_permissions": [
     "<all_urls>"
