--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "TypeSaver",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "__MSG_appDescription__",
   "default_locale": "ko",
   "icons": {
@@ -33,5 +33,31 @@
   ],
   "host_permissions": [
     "<all_urls>"
-  ]
+  ],
+  "commands": {
+    "paste-fav-1": {
+      "suggested_key": {
+        "default": "Alt+Shift+1"
+      },
+      "description": "Paste favorite snippet 1"
+    },
+    "paste-fav-2": {
+      "suggested_key": {
+        "default": "Alt+Shift+2"
+      },
+      "description": "Paste favorite snippet 2"
+    },
+    "paste-fav-3": {
+      "suggested_key": {
+        "default": "Alt+Shift+3"
+      },
+      "description": "Paste favorite snippet 3"
+    },
+    "paste-fav-4": {
+      "suggested_key": {
+        "default": "Alt+Shift+4"
+      },
+      "description": "Paste favorite snippet 4"
+    }
+  }
 }
