feat: 즐겨찾기 contextMenu 구현
- contextMenu에 즐겨찾기 폴더 추가하였습니다.
- manifest 내 version 수정하였습니다.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -37,25 +37,29 @@
   "commands": {
     "paste-fav-1": {
       "suggested_key": {
-        "default": "Alt+Shift+1"
+        "default": "Alt+Shift+1",
+        "mac": "Alt+Shift+1"
       },
       "description": "Paste favorite snippet 1"
     },
     "paste-fav-2": {
       "suggested_key": {
-        "default": "Alt+Shift+2"
+        "default": "Alt+Shift+2",
+        "mac": "Alt+Shift+2"
       },
       "description": "Paste favorite snippet 2"
     },
     "paste-fav-3": {
       "suggested_key": {
-        "default": "Alt+Shift+3"
+        "default": "Alt+Shift+3",
+        "mac": "Alt+Shift+3"
       },
       "description": "Paste favorite snippet 3"
     },
     "paste-fav-4": {
       "suggested_key": {
-        "default": "Alt+Shift+4"
+        "default": "Alt+Shift+4",
+        "mac": "Alt+Shift+4"
       },
       "description": "Paste favorite snippet 4"
     }
