chore: 코드 스타일 개선

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,8 +23,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": [
-    "src",
-    "public"
-  ]
+  "include": ["src", "public"]
 }
