--- a/public/manifest.json
+++ b/public/manifest.json
@@ -28,12 +28,8 @@
       "js": ["contentScript.js"]
     }
   ],
-  "permissions": [
-    "storage", "contextMenus", "activeTab"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
+  "permissions": ["storage", "contextMenus", "activeTab"],
+  "host_permissions": ["<all_urls>"],
   "commands": {
     "paste-fav-1": {
       "suggested_key": {
