--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "TypeSaver",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "__MSG_appDescription__",
   "default_locale": "ko",
   "icons": {
@@ -33,33 +33,33 @@
   "commands": {
     "paste-fav-1": {
       "suggested_key": {
-        "default": "Ctrl+Shift+1",
-        "windows": "Ctrl+Shift+1",
-        "mac": "Ctrl+Shift+1"
+        "default": "Alt+A",
+        "windows": "Alt+A",
+        "mac": "Alt+A"
       },
       "description": "Paste favorite snippet 1"
     },
     "paste-fav-2": {
       "suggested_key": {
-        "default": "Ctrl+Shift+2",
-        "windows": "Ctrl+Shift+1",
-        "mac": "Ctrl+Shift+2"
+        "default": "Alt+S",
+        "windows": "Alt+S",
+        "mac": "Alt+S"
       },
       "description": "Paste favorite snippet 2"
     },
     "paste-fav-3": {
       "suggested_key": {
-        "default": "Ctrl+Shift+3",
-        "windows": "Ctrl+Shift+1",
-        "mac": "Ctrl+Shift+3"
+        "default": "Alt+Z",
+        "windows": "Alt+Z",
+        "mac": "Alt+Z"
       },
       "description": "Paste favorite snippet 3"
     },
     "paste-fav-4": {
       "suggested_key": {
-        "default": "Ctrl+Shift+4",
-        "windows": "Ctrl+Shift+1",
-        "mac": "Ctrl+Shift+4"
+        "default": "Alt+X",
+        "windows": "Alt+X",
+        "mac": "Alt+X"
       },
       "description": "Paste favorite snippet 4"
     }
